# gamdl-web

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.md  requirements.txt  run_test.sh
.github/workflows/: docker.yml
gamdl/: app.py  cli.py  downloader.py  downloader_song.py
gamdl/downloader/: downloader.py
gamdl/templates/: index.html
templates/: index.html
web/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
web/routers/: settings.py  tasks.py
web/services/: task_queue.py
web/static/: index.html
web/static/css/: style.css
web/static/js/: app.js
